have fully removed public references to EnvDTE-related functionality except inside the VisualStudio namespace

--- a/Zirpl.AppEngine.VisualStudioAutomation/Zirpl.AppEngine.VisualStudioAutomation.csproj
+++ b/Zirpl.AppEngine.VisualStudioAutomation/Zirpl.AppEngine.VisualStudioAutomation.csproj
@@ -107,14 +107,13 @@
     <Compile Include="AppGeneration\Config\DomainPropertyExtensions.cs" />
     <Compile Include="AppGeneration\Config\DomainType.cs" />
     <Compile Include="AppGeneration\Config\EnumValue.cs" />
-    <Compile Include="AppGeneration\Config\Parsers\ConfigFileException.cs" />
-    <Compile Include="AppGeneration\Config\Parsers\DomainFileParser.cs" />
-    <Compile Include="AppGeneration\Config\Parsers\Json\AppJson.cs" />
-    <Compile Include="AppGeneration\Config\Parsers\Json\DomainTypeJson.cs" />
-    <Compile Include="AppGeneration\Config\Parsers\Json\EnumValueJson.cs" />
-    <Compile Include="AppGeneration\Config\Parsers\Json\IdJson.cs" />
-    <Compile Include="AppGeneration\Config\Parsers\Json\PropertyJson.cs" />
-    <Compile Include="AppGeneration\Config\Parsers\Json\RelationshipJson.cs" />
+    <Compile Include="AppGeneration\Config\ConfigFileException.cs" />
+    <Compile Include="AppGeneration\Config\Parsing\DomainFileParser.cs" />
+    <Compile Include="AppGeneration\Config\Parsing\Json\DomainTypeJson.cs" />
+    <Compile Include="AppGeneration\Config\Parsing\Json\EnumValueJson.cs" />
+    <Compile Include="AppGeneration\Config\Parsing\Json\IdJson.cs" />
+    <Compile Include="AppGeneration\Config\Parsing\Json\PropertyJson.cs" />
+    <Compile Include="AppGeneration\Config\Parsing\Json\RelationshipJson.cs" />
     <Compile Include="AppGeneration\Config\Relationship.cs" />
     <Compile Include="AppGeneration\TextTemplating\TemplateProvider.cs" />
     <Compile Include="AppGeneration\TextTemplating\TemplateRunner.cs" />
@@ -144,6 +143,8 @@
     <Compile Include="TextTemplating\ITemplateRunner.cs" />
     <Compile Include="TextTemplating\ITransform.cs" />
     <Compile Include="TextTemplating\OutputFileManager.cs" />
+    <Compile Include="TextTemplating\ProjectItemIndex.cs" />
+    <Compile Include="TextTemplating\ProjectIndex.cs" />
     <Compile Include="VisualStudio\TransformExtensions.cs" />
     <Compile Include="TextTemplating\ChildTransform.cs" />
     <Compile Include="TextTemplating\BuildActionTypeEnum.cs" />
@@ -166,7 +167,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="AppGeneration\Config\Parsers\Json\sample domain.zae" />
+    <None Include="AppGeneration\Config\Parsing\Json\sample domain.zae" />
     <None Include="AppGeneration\_templates\DT_cs.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>DT_cs.cs</LastGenOutput>
