--- a/Zirpl.Common.Tests/Zirpl.Common.Tests.csproj
+++ b/Zirpl.Common.Tests/Zirpl.Common.Tests.csproj
@@ -63,6 +63,9 @@
     <Compile Include="NumberExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reflection\AssemblyExtensionsTests.cs" />
+    <Compile Include="Reflection\Fluent\FieldQueryTests.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Reflection\ObjectExtensionsTests.cs" />
     <Compile Include="Reflection\DynamicTypeAccessorTests.cs" />
     <Compile Include="Reflection\ReflectionTypeAccessorTests.cs" />
@@ -86,9 +89,7 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Reflection\Fluent\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
