added IMemberTypeQuery and intergrated and implemented

--- a/Zirpl.Common.Silverlight5/Zirpl.Common.Silverlight5.csproj
+++ b/Zirpl.Common.Silverlight5/Zirpl.Common.Silverlight5.csproj
@@ -186,6 +186,9 @@
     <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IMemberScopeQuery.cs">
       <Link>Reflection\Fluent\_interfaces\IMemberScopeQuery.cs</Link>
     </Compile>
+    <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IMemberTypeQuery.cs">
+      <Link>Reflection\Fluent\_interfaces\IMemberTypeQuery.cs</Link>
+    </Compile>
     <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IMethodAccessibilityQuery.cs">
       <Link>Reflection\Fluent\_interfaces\IMethodAccessibilityQuery.cs</Link>
     </Compile>
