--- a/Zirpl.Common.Portable/Zirpl.Common.Portable.csproj
+++ b/Zirpl.Common.Portable/Zirpl.Common.Portable.csproj
@@ -169,6 +169,9 @@
     <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IMemberScopeQuery.cs">
       <Link>Reflection\Fluent\_interfaces\IMemberScopeQuery.cs</Link>
     </Compile>
+    <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IMemberTypeQuery.cs">
+      <Link>Reflection\Fluent\_interfaces\IMemberTypeQuery.cs</Link>
+    </Compile>
     <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IMethodAccessibilityQuery.cs">
       <Link>Reflection\Fluent\_interfaces\IMethodAccessibilityQuery.cs</Link>
     </Compile>
