--- a/Zirpl.Common.Net45/Zirpl.Common.Net45.csproj
+++ b/Zirpl.Common.Net45/Zirpl.Common.Net45.csproj
@@ -102,6 +102,9 @@
     <Compile Include="..\Zirpl.Common\Reflection\DynamicTypeAccessor.cs">
       <Link>Reflection\DynamicTypeAccessor.cs</Link>
     </Compile>
+    <Compile Include="..\Zirpl.Common\Reflection\Fluent\AssignabilityEvaluator.cs">
+      <Link>Reflection\Fluent\AssignabilityEvaluator.cs</Link>
+    </Compile>
     <Compile Include="..\Zirpl.Common\Reflection\Fluent\ConstructorQuery.cs">
       <Link>Reflection\Fluent\ConstructorQuery.cs</Link>
     </Compile>
@@ -135,6 +138,9 @@
     <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IAccessibilityQueryBase.cs">
       <Link>Reflection\Fluent\_interfaces\IAccessibilityQueryBase.cs</Link>
     </Compile>
+    <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IAssignabilityQueryBase.cs">
+      <Link>Reflection\Fluent\_interfaces\IAssignabilityQueryBase.cs</Link>
+    </Compile>
     <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IConstructorAccessibilityQuery.cs">
       <Link>Reflection\Fluent\_interfaces\IConstructorAccessibilityQuery.cs</Link>
     </Compile>
@@ -155,6 +161,9 @@
     </Compile>
     <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IFieldAccessibilityQuery.cs">
       <Link>Reflection\Fluent\_interfaces\IFieldAccessibilityQuery.cs</Link>
+    </Compile>
+    <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IFieldAssignabilityQuery.cs">
+      <Link>Reflection\Fluent\_interfaces\IFieldAssignabilityQuery.cs</Link>
     </Compile>
     <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IFieldQuery.cs">
       <Link>Reflection\Fluent\_interfaces\IFieldQuery.cs</Link>
@@ -183,6 +192,9 @@
     <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IMethodQuery.cs">
       <Link>Reflection\Fluent\_interfaces\IMethodQuery.cs</Link>
     </Compile>
+    <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IMethodReturnTypeAssignabilityQuery.cs">
+      <Link>Reflection\Fluent\_interfaces\IMethodReturnTypeAssignabilityQuery.cs</Link>
+    </Compile>
     <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IMethodScopeQuery.cs">
       <Link>Reflection\Fluent\_interfaces\IMethodScopeQuery.cs</Link>
     </Compile>
@@ -197,6 +209,9 @@
     </Compile>
     <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IPropertyAccessibilityQuery.cs">
       <Link>Reflection\Fluent\_interfaces\IPropertyAccessibilityQuery.cs</Link>
+    </Compile>
+    <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IPropertyAssignabilityQuery.cs">
+      <Link>Reflection\Fluent\_interfaces\IPropertyAssignabilityQuery.cs</Link>
     </Compile>
     <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IPropertyQuery.cs">
       <Link>Reflection\Fluent\_interfaces\IPropertyQuery.cs</Link>
