--- a/Zirpl.Common/Zirpl.Common.csproj
+++ b/Zirpl.Common/Zirpl.Common.csproj
@@ -63,6 +63,7 @@
     </Compile>
     <Compile Include="Reflection\AssemblyExtensions.cs" />
     <Compile Include="Reflection\DynamicTypeAccessor.cs" />
+    <Compile Include="Reflection\Fluent\AssignabilityEvaluator.cs" />
     <Compile Include="Reflection\Fluent\ConstructorQuery.cs" />
     <Compile Include="Reflection\Fluent\ExtensionMethods.cs">
       <SubType>Code</SubType>
@@ -81,13 +82,17 @@
     <Compile Include="Reflection\Fluent\MemberQueryBase.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Reflection\Fluent\_interfaces\IAssignabilityQueryBase.cs" />
     <Compile Include="Reflection\Fluent\_interfaces\IConstructorScopeQuery.cs" />
     <Compile Include="Reflection\Fluent\_interfaces\IEventScopeQuery.cs" />
+    <Compile Include="Reflection\Fluent\_interfaces\IFieldAssignabilityQuery.cs" />
     <Compile Include="Reflection\Fluent\_interfaces\IFieldScopeQuery.cs" />
     <Compile Include="Reflection\Fluent\_interfaces\IMemberScopeQuery.cs" />
+    <Compile Include="Reflection\Fluent\_interfaces\IMethodReturnTypeAssignabilityQuery.cs" />
     <Compile Include="Reflection\Fluent\_interfaces\IMethodScopeQuery.cs" />
     <Compile Include="Reflection\Fluent\_interfaces\INestedTypeScopeQuery.cs" />
     <Compile Include="Reflection\Fluent\_interfaces\IMemberTypeQuery.cs" />
+    <Compile Include="Reflection\Fluent\_interfaces\IPropertyAssignabilityQuery.cs" />
     <Compile Include="Reflection\Fluent\_interfaces\IPropertyScopeQuery.cs" />
     <Compile Include="Reflection\Fluent\_interfaces\IScopeQueryBase.cs" />
     <Compile Include="Reflection\Fluent\_interfaces\IAccessibilityQueryBase.cs" />
